force-app/main/default/objects/Design_Pattern__c/Design_Pattern__c.object-meta.xml
<CustomObject>
    <description>Things that I like from other projects</description>
    <label>Design Pattern</label>
    <nameField>
        <label>Design Pattern Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Design Patterns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>