force-app/main/default/objects/Design_Pattern__c/fields/Example_Code__c.field-meta.xml
<CustomField>
    <fullName>Example_Code__c</fullName>
    <label>Example Code</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>