force-app/main/default/objects/Design_Pattern__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <description>What category is this</description>
    <label>Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
            <value>
                <fullName>OOP</fullName>
            </value>
            <value>
                <fullName>Devops</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>